--- a/JaismeenApp/Base.lproj/Main.storyboard
+++ b/JaismeenApp/Base.lproj/Main.storyboard
@@ -31,8 +31,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="66" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yTa-LL-PQR" userLabel="MyTable">
-                                <rect key="frame" x="0.0" y="49" width="375" height="128"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="66" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yTa-LL-PQR" userLabel="MyTable">
+                                <rect key="frame" x="0.0" y="49" width="375" height="569"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Row" rowHeight="66" id="0te-qa-6Uh" userLabel="Row" customClass="TaskManager" customModule="JaismeenApp" customModuleProvider="target">
@@ -58,7 +58,6 @@
                                                     <rect key="frame" x="318" y="7" width="51" height="31"/>
                                                     <connections>
                                                         <action selector="changeStatus:" destination="0te-qa-6Uh" eventType="valueChanged" id="Vfx-9R-d0t"/>
-                                                        <action selector="switchBtn:" destination="0te-qa-6Uh" eventType="valueChanged" id="WG2-1g-12V"/>
                                                     </connections>
                                                 </switch>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pbg-gG-EIr">
@@ -89,9 +88,14 @@
                                         <connections>
                                             <outlet property="Desc" destination="Wb1-Lk-Q2z" id="seF-ub-YcD"/>
                                             <outlet property="Item" destination="SMm-rU-MpL" id="fb0-Kd-cJ5"/>
+                                            <outlet property="editbtn" destination="Pbg-gG-EIr" id="7Tw-XU-c2O"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="9pv-A4-QxB" id="IzI-n6-goH"/>
+                                    <outlet property="delegate" destination="9pv-A4-QxB" id="b9N-OB-Ggy"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -105,10 +109,13 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="List" image="first" id="acW-dT-cKf"/>
+                    <connections>
+                        <outlet property="myTable" destination="yTa-LL-PQR" id="Nmx-q8-u4R"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
+            <point key="canvasLocation" x="424.80000000000001" y="-331.48425787106447"/>
         </scene>
         <!--Add Item-->
         <scene sceneID="wg7-f3-ORb">
