--- a/JaismeenApp/Base.lproj/Main.storyboard
+++ b/JaismeenApp/Base.lproj/Main.storyboard
@@ -154,11 +154,18 @@
                                 <rect key="frame" x="159" y="199" width="56" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Submit"/>
+                                <connections>
+                                    <action selector="submit:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="Im4-5p-zsv"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Add Item" image="second" id="cPa-gy-q4n"/>
+                    <connections>
+                        <outlet property="Desc" destination="EW7-by-DtP" id="Ib9-on-vhE"/>
+                        <outlet property="Item" destination="01K-oX-FkT" id="JdY-Mf-5pj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
